2015-06-12  Esa Peuha  <esa.peuha@gmail.com>

	* .cvsignore, games/.cvsignore, lib/.cvsignore, tests/.cvsignore:
	  New files.

2015-06-09  Esa Peuha  <esa.peuha@gmail.com>

	* lib/table.c: Remove unneeded include of X11/xpm.h

2015-06-08  Esa Peuha  <esa.peuha@gmail.com>

	* games/Makefile.am: Fix spider-img.c dependencies.
	* games/Makefile.in: Update.
	* lib/cards.h: Remove fake definition of struct image_list and
	  declarations of appimglib_imagelib and register_imagelib
	* games/canfield.c, games/golf.c, games/mastermind.c,
	  games/merlin.c, games/minesweeper.c, games/pegged.c,
	  games/taipedit.c, tests/test6.c: Include imagelib.h
	* lib/xwin.c: Remove redundant declaration of pixel_for
	* lib/xwin.h: Declare help_background and table_background
	* lib/help.c: Remove declarations of help_background and
	  table_background

2015-06-07  Esa Peuha  <esa.peuha@gmail.com>

	* games/spider.c, lib/imagelib.h: Remove declaration of nonexisting
	  function get_image_set_display_type
	* lib/table.h: Add everything defined in table.c
	* lib/cards.h: Remove things now in table.h
	* games/canfield.c, games/freecell.c, games/golf.c,
	  games/mastermind.c, games/merlin.c, games/minesweeper.c,
	  games/pegged.c, games/solitaire.c, games/spider.c,
	  games/taipedit.c, games/taipei.c, games/taipeilib.c,
	  games/thornq.c, lib/funcs.c, lib/help.c, lib/imagelib.c,
	  lib/stack.c, lib/table.c, lib/xwin.c, tests/penguins.c,
	  tests/test1.c, tests/test3.c, tests/test4.c, tests/test5.c,
	  tests/test6.c: Update included files.

2015-06-06  Esa Peuha  <esa.peuha@gmail.com>

	* games/canfield.c, games/golf.c, games/mastermind.c, games/merlin.c,
	  games/minesweeper.c, games/pegged.c, games/taipedit.c,
	  games/taipei.c, games/taipeilib.c, lib/help.c, lib/stack.c:
	  Remove unneeded extern declarations.

2015-06-05  Esa Peuha  <esa.peuha@gmail.com>

	* games/thornq.c: Fix undo bug.
	* lib/stack.c (stack_flip_move_stack): Fix undo bug.

2015-06-04  Esa Peuha  <esa.peuha@gmail.com>
