@@ -1,3 +1,8 @@
+2016-01-19  Esa Peuha  <esa.peuha@gmail.com>
+
+	* games/spider.c: Revert 1.11 from 2015-06-03 to fix games
+	  with 2 or 4 suits.
+
 2015-06-12  Esa Peuha  <esa.peuha@gmail.com>
 
 	* .cvsignore, games/.cvsignore, lib/.cvsignore, tests/.cvsignore:
